test/parse/relaxed/bad/maxvarexceededinbody1.cnf
p cnf 1 1
-1 2147483649 0
